--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Agro Farmer</title>
 </head>
 <body bgcolor="green">
-<h1>Agro Farmer is very important information to our farmers.</h1>
+<h1>Hello Everyone !</h1>
+  <p>This website is from Azure static web application. </p>
+  <img src="a1.jpg">
 </body>
 </html>
